--- a/thinknoack/designCat.html
+++ b/thinknoack/designCat.html
@@ -8,7 +8,7 @@ layout: null
 
   <div id="post{{count}}"class="col-sm-4 col-md-4 col-lg-3 workblock grid">
     <figure class="effect-bubba {{post.className}}">
-      <img src="{{ post.teaser-img }}" alt="{{post.title}}"/>
+      <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
       <figcaption>
         <h2>{{ post.title }}</h2>
         <p class="hidden-sm">{{post.teaser}}</p>
