--- a/thinknoack/allCat.html
+++ b/thinknoack/allCat.html
@@ -11,30 +11,34 @@ for the default layout see the file
       {% capture count %}
       {{ count | plus: '1' }}
       {% endcapture %} 
-    <div id="post-{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-      <figure class="effect-bubba {{post.className}} ">
-        <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
-        <figcaption>
-          <h2>{{ post.title }}</h2>
-          <p class="hidden-sm">{{post.teaser}}</p>
-          <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-        </figcaption>     
-      </figure>
-    </div>
+      <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
+        <figure class="{{post.className}} ">
+          <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
+          <figcaption>
+            <h2>{{ post.title }}</h2>
+            <p class="hidden-sm">{{post.teaser}}</p>
+            <div class="clearfix">
+              <small class="client"><span>Client:</span> {{post.client}}</small>
+              <small class="postType">{{post.className}}</small>
+            </div>
+            <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
+          </figcaption>     
+        </figure>
+      </div>
     {% endfor %}
-<div class="container" id="oldWorkSection">
+<div  id="oldWorkSection">
     <div class="row">
       <div class="col-xs-12"><h2>Older Work</h2></div>
-      {% for post in site.posts limit: 12 offset: 16 %}
-    <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-      <figure class="effect-bubba {{post.className}} ">
-<!--         <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
- -->        <figcaption>
-          <h3>{{ post.title }}</h3>
-          <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-        </figcaption>     
-      </figure>
-    </div>
+      {% for post in site.posts  offset: 16 %}
+        <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
+          <figure class="effect-bubba {{post.className}} ">
+           <!--  <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/> -->
+            <figcaption>
+              <h3>{{ post.title }}</h3>
+              <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
+            </figcaption>     
+          </figure>
+        </div>
       {% endfor %}
     </div>
 </div>
