--- a/thinknoack/designCat.html
+++ b/thinknoack/designCat.html
@@ -9,32 +9,35 @@ for the default layout see the file
 {% assign count = '0' %} 
 {% for post in site.categories.design limit: 16 %}
     {% capture count %}{{ count | plus: '1' }}{% endcapture %}
-
-  <div id="post{{count}}"class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-    <figure class="effect-bubba {{post.className}}">
-      <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
-      <figcaption>
-        <h2>{{ post.title }}</h2>
-        <p class="hidden-sm">{{post.teaser}}</p>
-          <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-      </figcaption>     
-    </figure>
-  </div>
+      <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
+        <figure class="{{post.className}} ">
+          <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
+          <figcaption>
+            <h2>{{ post.title }}</h2>
+            <p class="hidden-sm">{{post.teaser}}</p>
+            <div class="clearfix">
+              <small class="client"><span>Client:</span> {{post.client}}</small>
+              <small class="postType">{{post.className}}</small>
+            </div>
+            <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
+          </figcaption>     
+        </figure>
+      </div>
   {% endfor %}
 </div>
-<div class="container" id="oldWorkSection">
+<div id="oldWorkSection">
     <div class="row">
       <div class="col-xs-12"><h2>Older Design</h2></div>
-      {% for post in site.categories.design limit: 12 offset: 16 %}
- <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-      <figure class="effect-bubba {{post.className}} ">
-        <!-- <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/> -->
-        <figcaption>
-          <h3>{{ post.title }}</h3>
-          <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-        </figcaption>     
-      </figure>
-    </div>
+      {% for post in site.categories.design offset: 16 %}
+        <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
+          <figure class="effect-bubba {{post.className}} ">
+           <!--  <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/> -->
+            <figcaption>
+              <h3>{{ post.title }}</h3>
+              <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
+            </figcaption>     
+          </figure>
+        </div>
       {% endfor %}
     </div>
 </div>
