--- a/thinknoack/siteCat.html
+++ b/thinknoack/siteCat.html
@@ -25,13 +25,12 @@ for the default layout see the file
       </div>
   {% endfor %}
 </div>
-<div id="oldWorkSection">
+<!-- <div id="oldWorkSection">
      <div class="row">
       <div class="col-xs-12"><h2>Older Sites</h2></div>
       {% for post in site.categories.site offset: 16 %}
         <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
           <figure class="effect-bubba {{post.className}} ">
-           <!--  <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/> -->
             <figcaption>
               <h3>{{ post.title }}</h3>
               <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
@@ -40,4 +39,4 @@ for the default layout see the file
         </div>
       {% endfor %}
     </div>
-</div>
+</div> -->
