--- a/thinknoack/siteCat.html
+++ b/thinknoack/siteCat.html
@@ -7,7 +7,7 @@ handles the layout for site category via the ajax links on the home page
 for the default layout see the file
 -->
 {% assign count = '0' %} 
-{% for post in site.categories.site limit: 16 %}
+{% for post in site.categories.site %}
     {% capture count %}{{ count | plus: '1' }}{% endcapture %}
       <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
         <figure class="{{post.className}} ">
