--- a/thinknoack/allCat.html
+++ b/thinknoack/allCat.html
@@ -1,44 +1,34 @@
 ---
 layout: null
 ---
-<div class="row siteblock">
 <!--
 handles the layout for all category via the ajax links on the home page
-for the default layout see the file
+for the default layout see the port.html file (this cat template "should" match the default template)
 -->
-    {% assign count = '0' %} 
-    {% for post in site.posts limit: 16 %}
-      {% capture count %}
-      {{ count | plus: '1' }}
-      {% endcapture %} 
-      <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-        <figure class="{{post.className}} ">
-          <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
-          <figcaption>
-            <h2>{{ post.title }}</h2>
-            <p class="hidden-sm">{{post.teaser}}</p>
-            <div class="clearfix">
-              <small class="client"><span>Client:</span> {{post.client}}</small>
-              <small class="postType">{{post.className}}</small>
-            </div>
-            <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-          </figcaption>     
-        </figure>
-      </div>
-    {% endfor %}
-<div  id="oldWorkSection">
-    <div class="row">
-      <div class="col-xs-12"><h2>Older Work</h2></div>
-      {% for post in site.posts  offset: 16 %}
-        <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-          <figure class="effect-bubba {{post.className}} ">
-           <!--  <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/> -->
-            <figcaption>
-              <h3>{{ post.title }}</h3>
-              <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-            </figcaption>     
-          </figure>
+<div class="container">
+    <div class="col-md-12">
+        <div class="siteblock clearfix">
+            {% assign count = '0' %}
+            {% for post in site.posts limit: 15 %}
+            {% capture count %}{{ count | plus: '1' }}{% endcapture %}
+            {% include portfolio-layout.html %}
+            {% endfor %}
         </div>
-      {% endfor %}
+    </div>
+</div>
+<div class="old-work-wrap">
+    <div class="container">
+        <div class="col-md-12">
+            <section>
+                <div>
+                    <div id="oldWorkSection">
+                        <h2>Older Work</h2>
+                        {% for post in site.posts offset: 15 %}
+                        {% include portfolio-old.html %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
