--- a/thinknoack/siteCat.html
+++ b/thinknoack/siteCat.html
@@ -1,42 +1,34 @@
 ---
 layout: null
 ---
-<div class="row siteblock">
-<!--
-handles the layout for site category via the ajax links on the home page
-for the default layout see the file
--->
-{% assign count = '0' %} 
-{% for post in site.categories.site %}
-    {% capture count %}{{ count | plus: '1' }}{% endcapture %}
-      <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-        <figure class="{{post.className}} ">
-          <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
-          <figcaption>
-            <h2>{{ post.title }}</h2>
-            <p class="hidden-sm">{{post.teaser}}</p>
-            <div class="clearfix">
-              <small class="client"><span>Client:</span> {{post.client}}</small>
-              <small class="postType">{{post.className}}</small>
-            </div>
-            <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-          </figcaption>     
-        </figure>
-      </div>
-  {% endfor %}
+<div class="container">
+	<div class="col-md-12">
+		<div class="siteblock clearfix">
+		<!--
+		handles the layout for site category via the ajax links on the home page
+		for the default layout see the port.html file
+		-->
+		{% assign count = '0' %}
+		{% for post in site.categories.site limit: 9 %}
+		{% capture count %}{{ count | plus: '1' }}{% endcapture %}
+		{% include portfolio-layout.html %}
+		{% endfor %}
+		</div>
+	</div>
 </div>
-<!-- <div id="oldWorkSection">
-     <div class="row">
-      <div class="col-xs-12"><h2>Older Sites</h2></div>
-      {% for post in site.categories.site offset: 16 %}
-        <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-          <figure class="effect-bubba {{post.className}} ">
-            <figcaption>
-              <h3>{{ post.title }}</h3>
-              <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-            </figcaption>     
-          </figure>
+<div class="old-work-wrap">
+    <div class="container">
+        <div class="col-md-12">
+            <section>
+                <div>
+                    <div id="oldWorkSection">
+                        <h2>Older Work</h2>
+                        {% for post in site.categories.site offset: 9 %}
+                        {% include portfolio-old.html %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </section>
         </div>
-      {% endfor %}
     </div>
-</div> -->
+</div>
