--- a/thinknoack/siteCat.html
+++ b/thinknoack/siteCat.html
@@ -22,7 +22,7 @@ layout: null
             <section>
                 <div>
                     <div id="oldWorkSection">
-                        <h2>Older Work</h2>
+                        <h2>Older Sites</h2>
                         {% for post in site.categories.site offset: 9 %}
                         {% include portfolio-old.html %}
                         {% endfor %}
