--- a/thinknoack/siteCat.html
+++ b/thinknoack/siteCat.html
@@ -16,6 +16,7 @@ layout: null
 		</div>
 	</div>
 </div>
+{% if count >= '9'  %}
 <div class="old-work-wrap">
     <div class="container">
         <div class="col-md-12">
@@ -32,3 +33,4 @@ layout: null
         </div>
     </div>
 </div>
+{% endif %}
