fixing front-end typos

--- a/thinknoack/index.html
+++ b/thinknoack/index.html
@@ -3,5 +3,5 @@ layout: front
 permalink: /
 title: Online Portfolio of Gregory Noack
 intro: Welcome to ThinkNoack
-subTeaser: My Name is Gregory Noack, I am a front-end developer, and this is my portfolio.
+subTeaser: My Name is Gregory Noack, I am a front end developer, and this is my portfolio.
 ---
